Updated swagger annotations
