# storage/api-docs/api-docs.json
@@ -36,6 +36,59 @@
                 ]
             }
         },
+        "/api/auth/email/verify/{id}/{hash}": {
+            "get": {
+                "tags": [
+                    "Email verification"
+                ],
+                "summary": "Verify email",
+                "description": "Verify user's email",
+                "operationId": "verifyEmail",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "User's id",
+                        "required": true,
+                        "example": "95e36453-b0e0-4827-8e05-3bf13981dc28"
+                    },
+                    {
+                        "name": "hash",
+                        "in": "path",
+                        "description": "Hash from server",
+                        "required": true,
+                        "example": "552cb23b88d656134881275f5925d5c2e252ca78"
+                    },
+                    {
+                        "name": "expires",
+                        "in": "query",
+                        "description": "Time until link expire",
+                        "required": true,
+                        "example": "1648044292"
+                    },
+                    {
+                        "name": "signature",
+                        "in": "query",
+                        "description": "Signature from server",
+                        "required": true,
+                        "example": "1ce16e79c7392251ea3969fd1774a674efb5173efc6c4ab4d90446d58d515869"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/auth/login": {
             "post": {
                 "tags": [
@@ -300,89 +353,6 @@
                 }
             }
         },
-        "/api/user/password": {
-            "post": {
-                "tags": [
-                    "User"
-                ],
-                "summary": "Change password",
-                "description": "Change user's password",
-                "operationId": "userPassword",
-                "requestBody": {
-                    "description": "Pass old and new password",
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "old_password",
-                                    "new_password",
-                                    "new_password_confirmation"
-                                ],
-                                "properties": {
-                                    "old_password": {
-                                        "type": "password",
-                                        "example": "password123"
-                                    },
-                                    "new_password": {
-                                        "type": "password",
-                                        "example": "password12345"
-                                    },
-                                    "new_password_confirmation": {
-                                        "type": "password",
-                                        "example": "password12345"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "string"
-                                },
-                                "example": "Password updated!"
-                            }
-                        }
-                    },
-                    "422": {
-                        "description": "Unprocessable Content",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "attribiute_name": {
-                                            "type": "array",
-                                            "items": {
-                                                "type": "string",
-                                                "example": "problem_message"
-                                            }
-                                        },
-                                        "other_attribiute_name": {
-                                            "type": "array",
-                                            "items": {
-                                                "type": "string",
-                                                "example": "problem_message"
-                                            }
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
-            }
-        },
         "/api/user/delete": {
             "delete": {
                 "tags": [
@@ -566,6 +536,89 @@
                                 "schema": {
                                     "properties": {
                                         "name": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "string",
+                                                "example": "problem_message"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/api/user/password": {
+            "put": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Update password",
+                "description": "Update user's password",
+                "operationId": "userPassword",
+                "requestBody": {
+                    "description": "Pass old and new password",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "old_password",
+                                    "new_password",
+                                    "new_password_confirmation"
+                                ],
+                                "properties": {
+                                    "old_password": {
+                                        "type": "password",
+                                        "example": "password123"
+                                    },
+                                    "new_password": {
+                                        "type": "password",
+                                        "example": "password12345"
+                                    },
+                                    "new_password_confirmation": {
+                                        "type": "password",
+                                        "example": "password12345"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "example": "Password updated!"
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Content",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "attribiute_name": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "string",
+                                                "example": "problem_message"
+                                            }
+                                        },
+                                        "other_attribiute_name": {
                                             "type": "array",
                                             "items": {
                                                 "type": "string",
